--- a/FrotiX.Site.OLD/Pages/SecaoPatrimonial/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/SecaoPatrimonial/Upsert.cshtml
@@ -105,11 +105,7 @@
 								<div class="col-4">
 									<label class="label font-weight-bold ftx-label label-required">Setor
 										Patrimonial</label>
-									<ejs-combobox id="cmbSetor" placeholder="Selecione um Setor" allowFiltering="true"
-										filterType="Contains" popupHeight="200px" width="100%" showClearButton="true"
-										ejs-for="SecaoObj.SetorId" name="SecaoObj.SetorId">
-										<e-combobox-fields text="text" value="value"></e-combobox-fields>
-									</ejs-combobox>
+									<input id="cmbSetor" name="SecaoObj.SetorId" style="width: 100%;" />
 								</div>
 							</div>
 
@@ -174,6 +170,22 @@
 		crossorigin="anonymous" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
+
+	<script>
+	(function () {
+		try {
+			$("#cmbSetor").kendoComboBox({
+				dataTextField: "text",
+				dataValueField: "value",
+				placeholder: "Selecione um Setor",
+				filter: "contains",
+				height: 200
+			});
+		} catch (error) {
+			Alerta.TratamentoErroComLinha("SecaoPatrimonial/Upsert.cshtml", "kendoControls.init", error);
+		}
+	})();
+	</script>
 
 	<script src="~/js/dropify.min.js"></script>
 	<script src="~/js/cadastros/secao_patrimonial.js" asp-append-version="true"></script>
