--- a/FrotiX.Site.OLD/Pages/Ocorrencia/Ocorrencias.cshtml
+++ b/FrotiX.Site.OLD/Pages/Ocorrencia/Ocorrencias.cshtml
@@ -527,38 +527,19 @@
                 <!-- Veículo -->
                 <div class="col-12 col-md-3">
                     <label class="form-label">Veículo</label>
-                    <ejs-combobox id="lstVeiculos"
-                                  placeholder="Selecione um Veículo..."
-                                  allowFiltering="true" filterType="Contains"
-                                  dataSource="@lstVeiculos"
-                                  popupHeight="250px" width="100%" showClearButton="true">
-                        <e-combobox-fields text="Descricao" value="Id"></e-combobox-fields>
-                    </ejs-combobox>
+                    <input id="lstVeiculos" style="width: 100%;" />
                 </div>
 
                 <!-- Motorista -->
                 <div class="col-12 col-md-3">
                     <label class="form-label">Motorista</label>
-                    <ejs-combobox id="lstMotorista"
-                                  placeholder="Selecione um Motorista..."
-                                  allowFiltering="true" filterType="Contains"
-                                  dataSource="@lstMotoristas"
-                                  popupHeight="250px" width="100%" showClearButton="true"
-                                  created="onCmbMotoristaCreated">
-                        <e-combobox-fields text="Descricao" value="Id"></e-combobox-fields>
-                    </ejs-combobox>
+                    <input id="lstMotorista" style="width: 100%;" />
                 </div>
 
                 <!-- Status -->
                 <div class="col-12 col-md-3">
                     <label class="form-label">Status</label>
-                    <ejs-combobox id="lstStatus"
-                                  placeholder="Status da Ocorrência..."
-                                  allowFiltering="true" filterType="Contains"
-                                  dataSource="@lstStatus"
-                                  popupHeight="250px" width="100%" showClearButton="true">
-                        <e-combobox-fields text="Status" value="StatusId"></e-combobox-fields>
-                    </ejs-combobox>
+                    <input id="lstStatus" style="width: 100%;" />
                 </div>
 
                 <!-- Botão Filtrar -->
@@ -735,35 +716,62 @@
 @section ScriptsBlock {
     <script src="~/js/cadastros/ocorrencias.js" asp-append-version="true"></script>
     <script>
-        function onCmbMotoristaCreated() {
-            try {
-                var combo = document.getElementById('lstMotorista').ej2_instances[0];
+    (function () {
+        try {
+            var dataVeiculos = @Html.Raw(Json.Serialize(lstVeiculos));
+            var dataMotoristas = @Html.Raw(Json.Serialize(lstMotoristas));
+            var dataStatus = @Html.Raw(Json.Serialize(lstStatus));
 
-                combo.itemTemplate = function (data) {
-                    var imgSrc = (data.Foto && data.Foto.startsWith('data:image'))
-                        ? data.Foto
-                        : '/images/barbudo.jpg';
-                    return `
-                    <div class="d-flex align-items-center">
-                        <img src="${imgSrc}" alt="Foto" style="height:40px; width:40px; border-radius:50%; margin-right:10px;" />
-                        <span>${data.Descricao}</span>
-                    </div>`;
-                };
+            $("#lstVeiculos").kendoComboBox({
+                dataTextField: "descricao",
+                dataValueField: "id",
+                placeholder: "Selecione um Ve\u00edculo...",
+                filter: "contains",
+                dataSource: dataVeiculos,
+                height: 250
+            });
 
-                combo.valueTemplate = function (data) {
-                    if (!data) return '';
-                    var imgSrc = (data.Foto && data.Foto.startsWith('data:image'))
-                        ? data.Foto
-                        : '/images/barbudo.jpg';
-                    return `
-                    <div class="d-flex align-items-center">
-                        <img src="${imgSrc}" alt="Foto" style="height:30px; width:30px; border-radius:50%; margin-right:10px;" />
-                        <span>${data.Descricao}</span>
-                    </div>`;
-                };
-            } catch (error) {
-                console.error("Erro ao configurar templates do motorista:", error);
-            }
+            $("#lstMotorista").kendoComboBox({
+                dataTextField: "descricao",
+                dataValueField: "id",
+                placeholder: "Selecione um Motorista...",
+                filter: "contains",
+                dataSource: dataMotoristas,
+                height: 250,
+                template: function (dataItem) {
+                    try {
+                        var imgSrc = (dataItem.foto && dataItem.foto.startsWith('data:image'))
+                            ? dataItem.foto
+                            : '/images/barbudo.jpg';
+                        return '<div class="d-flex align-items-center">' +
+                            '<img src="' + imgSrc + '" alt="Foto" style="height:40px; width:40px; border-radius:50%%; margin-right:10px;" />' +
+                            '<span>' + kendo.htmlEncode(dataItem.descricao) + '</span></div>';
+                    } catch (e) { return dataItem.descricao; }
+                },
+                valueTemplate: function (dataItem) {
+                    try {
+                        if (!dataItem || !dataItem.descricao) return '';
+                        var imgSrc = (dataItem.foto && dataItem.foto.startsWith('data:image'))
+                            ? dataItem.foto
+                            : '/images/barbudo.jpg';
+                        return '<div class="d-flex align-items-center">' +
+                            '<img src="' + imgSrc + '" alt="Foto" style="height:30px; width:30px; border-radius:50%%; margin-right:10px;" />' +
+                            '<span>' + kendo.htmlEncode(dataItem.descricao) + '</span></div>';
+                    } catch (e) { return dataItem.descricao || ''; }
+                }
+            });
+
+            $("#lstStatus").kendoComboBox({
+                dataTextField: "status",
+                dataValueField: "statusId",
+                placeholder: "Status da Ocorr\u00eancia...",
+                filter: "contains",
+                dataSource: dataStatus,
+                height: 250
+            });
+        } catch (error) {
+            Alerta.TratamentoErroComLinha("Ocorrencias.cshtml", "kendoControls.init", error);
         }
+    })();
     </script>
 }
