--- a/FrotiX.Site.OLD/Pages/Patrimonio/Index.cshtml
+++ b/FrotiX.Site.OLD/Pages/Patrimonio/Index.cshtml
@@ -1,7 +1,6 @@
 @page
 @using FrotiX.Repository.IRepository
-@using Syncfusion.EJ2
-@addTagHelper *, Syncfusion.EJ2
+
 
 @* ========================================================================================
  * ARQUIVO: Pages/Patrimonio/Index.cshtml
@@ -116,15 +115,7 @@
 									</ejs-dropdowntree>
 								</div>
 								<div class="col-3">
-									<ejs-combobox id="cmbSituacao"
-												  placeholder="Selecione uma Situação"
-												  allowFiltering="true"
-												  filterType="Contains"
-												  popupHeight="250px"
-												  width="100%"
-												  showClearButton="true">
-										<e-combobox-fields></e-combobox-fields>
-									</ejs-combobox>
+											<input id="cmbSituacao" style="width: 100%;" />
 								</div>
 								<div class="col-3 d-flex align-items-end">
 									<a class="btn btn-marrom text-white w-100"
@@ -176,6 +167,23 @@
 @section ScriptsBlock {
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" crossorigin="anonymous" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+
+	<script>
+		(function () {
+			try {
+				$("#cmbSituacao").kendoComboBox({
+					dataTextField: "text",
+					dataValueField: "value",
+					placeholder: "Selecione uma Situa\u00e7\u00e3o",
+					filter: "contains",
+					height: 250,
+					clearButton: true
+				});
+			} catch (error) {
+				Alerta.TratamentoErroComLinha("Index.cshtml", "kendoComboBox.init", error);
+			}
+		})();
+	</script>
 
 	<script src="~/js/cadastros/patrimonio.js" asp-append-version="true"></script>
 }
